--- a/package.json
+++ b/package.json
@@ -9,26 +9,29 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@gobdigital-cl/gob.cl": "^1.3.10",
+    "bootstrap": "^4.0.0",
     "axios": "^0.16.2",
-    "bootstrap-sass": "^3.3.7",
-    "browser-sync": "^2.23.5",
-    "browser-sync-webpack-plugin": "^1.2.0",
     "clipboard": "^1.7.1",
-    "cross-env": "^5.1.3",
     "d3": "^4.12.2",
     "element-ui": "^1.4.12",
     "google-maps": "^3.2.1",
     "gumshoe": "github:cferdinandi/gumshoe",
-    "html-truncate": "^1.2.2",
     "jquery": "^3.1.1",
-    "laravel-mix": "^1.7.2",
-    "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "numeral": "^2.0.6",
     "smooth-scroll": "^12.1.5",
     "tinymce": "^4.7.4",
     "tippy.js": "^2.0.9",
     "vue": "^2.5.13"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.23.5",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "cross-env": "^5.1.3",
+    "html-truncate": "^1.2.2",
+    "laravel-mix": "^1.7.2",
+    "lodash": "^4.17.4"
   }
 }
